[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Player/Player_Models/necromancer_idle_anim_f0.png" type="Texture" id=1]
[ext_resource path="res://Assets/Player/Player_Weapons/Bat/Weapon_Bat.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player/Player_Script/Player.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.5, 8.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 58, 16 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 1.5 )
shape = SubResource( 2 )

[node name="Player_Model" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Roll" type="Timer" parent="."]

[node name="Cooldown" type="Timer" parent="Roll"]

[node name="Player_Weapon" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
offset = Vector2( 85, 9 )

[node name="Player_Weapon" type="Area2D" parent="Player_Weapon"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_Weapon/Player_Weapon"]
position = Vector2( 86, 8 )
shape = SubResource( 1 )

[connection signal="timeout" from="Roll" to="." method="_on_Roll_timeout"]
[connection signal="timeout" from="Roll/Cooldown" to="." method="_on_Cooldown_timeout"]
